[metadata]
name = aiohttp-send
description = Send file in for aiohttp.web (http server for asyncio)
long_description = file: README.md
long_description_content_type = text/markdown
author = Trim21
author-email = trim21me@gmail.com
url = https://github.com/Trim21/aiohttp-send
license = MIT
include_package_data = True

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Framework :: AsyncIO

[options]
packages = aiohttp_send
python_requires = >=3.5.3
